--- a/references.bib
+++ b/references.bib
@@ -2,12 +2,27 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2012-06-28 14:31:15 -0400 
+%% Created for Evan Bollig at 2012-07-11 01:45:53 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{FuselierWright2012,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2012arXiv1206.0047F},
+	Archiveprefix = {arXiv},
+	Author = {{Fuselier}, E.~J. and {Wright}, G.~B.},
+	Date-Added = {2012-07-11 01:45:44 -0400},
+	Date-Modified = {2012-07-11 01:45:53 -0400},
+	Eprint = {1206.0047},
+	Journal = {ArXiv e-prints},
+	Keywords = {Mathematics - Numerical Analysis, 58J45, 35K57, 41A05, 41A25, 41A30, 41A63, 65D25, 65M20, 65M70, 46E22, 35B36},
+	Month = may,
+	Primaryclass = {math.NA},
+	Title = {{A High-Order Kernel Method for Diffusion and Reaction-Diffusion Equations on Surfaces}},
+	Year = 2012}
 
 @article{Saad1986,
 	Author = {Saad, Youcef; and Schultz, Martin H.},
