--- a/karen.tex
+++ b/karen.tex
@@ -149,7 +149,7 @@ need Survey of goals stated in prospectus and whether they were completed or not
 %\nocite{Vuduc2005}
 
 \bibliographystyle{plain}
-\bibliography{paper1_references,pr_2012_references}
+\bibliography{references,paper1_references,pr_2012_references}
 
 %\input{biography.tex}
 
