Expanding thesis with stokes and node ordering

--- a/karen.tex
+++ b/karen.tex
@@ -28,7 +28,7 @@
 
 
 
-\title{PDE Solutions with RBF-FD and Multiple GPUs}
+\title{Multi-GPU Solutions of Geophysical PDEs with Radial Basis Function-generated Finite Differences}
 \author{Evan F. Bollig}
 \college{College of Arty Science}
 \department{Department of Scientific Computing} % Delete if no department
@@ -40,10 +40,11 @@
 %\subject{My Topic}
 %\keywords{keyterm1; keyterm2; keyterm3; ...}
 
-\committeeperson{Faux Causson Yorverk}{Professor Directing Thesis}
-\committeeperson{Verda Boizaar}{University Representative}
-\committeeperson{Beauxeau D'Claune}{Committee Member}
-\committeeperson{Arlip Zarseeld}{Committee Member}
+\committeeperson{Gordon Erlebacher}{Professor Directing Thesis}
+\committeeperson{Natasha Flyer}{Professor Directing Thesis}
+\committeeperson{Mark Sussman}{University Representative}
+\committeeperson{Dennis Slice}{Committee Member}
+\committeeperson{Ming Ye}{Committee Member}
 
 %%%% USEPACKAGES for MACROS %%%%%
 \usepackage{algpseudocode}
@@ -59,20 +60,20 @@
 \begin{document}
 
 	%% UNCOMMENT THIS FOR ETD CLEARANCE
-	%\frontmatter
-	%\maketitle
-	%\makecommitteepage
+	\frontmatter
+	\maketitle
+	\makecommitteepage
 	%
-	%\input{dedication.tex}
-	%\input{acknowledgments.tex}
+	\input{dedication.tex}
+	\input{acknowledgments.tex}
 	%
-	%\tableofcontents
-	%\listoftables
-	%\listoffigures
-	%\listofalgorithms
+	\tableofcontents
+	\listoftables
+	\listoffigures
+	\listofalgorithms
 	%
-	%\input{symbols.tex}
-	%\input{abbreviations.tex}
+	\input{symbols.tex}
+	\input{abbreviations.tex}
 	%
 	\input{abstract.tex}
 
