WOrking on color figures from paper1. Going to use my old NCL figures

--- a/karen.tex
+++ b/karen.tex
@@ -58,21 +58,21 @@
 
 \begin{document}
 
-	%% UNCOMMENT THIS FOR ETD CLEARANCE
-	\frontmatter
-	\maketitle
-	\makecommitteepage
-	%
-	\input{dedication.tex}
-	\input{acknowledgments.tex}
-	%
-	\tableofcontents
-	\listoftables
-	\listoffigures
-	\listofalgorithms
-	%
-	\input{symbols.tex}
-	\input{abbreviations.tex}
+%% UNCOMMENT THIS FOR ETD CLEARANCE
+%\frontmatter
+%\maketitle
+%\makecommitteepage
+%%
+%\input{dedication.tex}
+%\input{acknowledgments.tex}
+%%
+%\tableofcontents
+%\listoftables
+%\listoffigures
+%\listofalgorithms
+%%
+%\input{symbols.tex}
+%\input{abbreviations.tex}
 	%
 	\input{abstract.tex}
 
@@ -91,7 +91,7 @@ need Survey of goals stated in prospectus and whether they were completed or not
 
 %\chapter{Review}
 %\begin{itemize} 
-%	\item Review of the Literature (don‚Äôt make the mistake of reviewing after rather than before data collection in qualitative studies)
+%	\item Review of the Literature (don\UTF{201A}\UTF{00C4}\UTF{00F4}t make the mistake of reviewing after rather than before data collection in qualitative studies)
 %	\item The more references the better
 %	\item All relevant, reliable, and recent studies be included
 %	\item Organization is critical 
@@ -101,7 +101,7 @@ need Survey of goals stated in prospectus and whether they were completed or not
 %\chapter{Research Methodology}
 %\begin{itemize} 
 %	\item Research Perspective: type of methodology and why it is the best way to answer your research question
-%	\item Context and Access: where, when, and how you will Ô¨Ånd participants 
+%	\item Context and Access: where, when, and how you will \UTF{00D4}¨Ånd participants 
 % 	\item Instrumentation: include copy in appendix or in text if using survey or interview questions
 % 	\item Procedure: be specific so a reader could imitate your study 
 % 	\item Data Analysis: again, specific down to the computer program used for statistics
